Add Vector API module to compilation phase to fix build errors