@@ -69,6 +69,10 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+compileTestJava {
+    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
+}
+
 test {
     useJUnitPlatform()
     jvmArgs = [
